--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
   <title>Overtime3</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-
-  <body>
-    <%= yield %>
-  </body>
+<body>
+ <div class="container">
+	<div class="row">
+		<div class="col-md-12">
+			<%= render 'shared/nav' %>
+			<%= yield %>
+		</div>
+	</div>
+</div>
+			
+</body>
 </html>
