--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,21 +18,8 @@
 		</tr>
 	</thread>
 	<tbody>
-		<% @posts.each do |post| %>
-			<tr>
-				<td>
-					<%=  post.id %>
-				</td>
-				<td>
-					<%= post.date %>
-				</td>
-				<td>
-					<%= post.user.last_name %>
-				</td>
-				<td>
-					<%= truncate(post.rationale) %>
-				</td>
-			</tr>
+		<% @posts.each do |post| %>		
+			<%= render @posts %>	
 		<% end %>	
 	</tbody>
 </table>		
