--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,15 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Overtime3</title>
+  <title>Overtime</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
- <div class="container">
+
+<div class="container">
 	<div class="row">
 		<div class="col-md-12">
 			<%= render 'shared/nav' %>
@@ -15,6 +17,8 @@
 		</div>
 	</div>
 </div>
-			
+
+<%= js add_gritter(flash[:notice], title: "Overtime App Notification", sticky: false) %>
+
 </body>
 </html>
